--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </label>
             <input type="checkbox" id="ch">
             <nav class="menucontact">
-              <a class="er" href="index.html"><b>page principale</b></a>
+              <a class="er" href="index.html"><b>Page principale</b></a>
               <a href="pagecontact.html"><b>Me contacter</b></a>
               <a href="projet.html"><b>Mes projets</b></a>
             </nav>
@@ -31,7 +31,7 @@
       <!------------------------------------------------------------------------------------------------------------------------->
 
           <nav class="Gmenucontact">
-            <a href="index.html"><b>page principale</b></a>
+            <a href="index.html"><b>Page principale</b></a>
             <a href="pagecontact.html"><b>Me contacter</b></a>
             <a href="projet.html"><b>Mes projets</b></a>
           </nav>
