--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <h1>Timéo Danois</h1>
             </div>
             <div class="vie">
-              <a>Je suis un étudiant à EPSI de Nantes en première année, je passe un BTS SIO. J'ai 18 ans et suis titulaire d'un bac STI2D.</a>
+              <a>Je suis un étudiant à l'EPSI de Nantes en première année, je passe un BTS SIO. J'ai 18 ans et suis titulaire d'un bac STI2D.</a>
             </div>
           </div>
         </div>
