--- a/pagecontact.html
+++ b/pagecontact.html
@@ -27,6 +27,7 @@
                             <a class="er" href="index.html"><b>Page principale</b></a>
                             <a href="pagecontact.html"><b>Me contacter</b></a>
                             <a href="projet.html"><b>Mes projets</b></a>
+                            <a href="https://buy.stripe.com/28o3g13Qs4FI0SYfYY"><b>Cadeau</b></a>
                         </nav>
                     </div>
                     <!------------------------------------------------------------------------------------------------------------------------->
@@ -34,6 +35,7 @@
                         <a href="index.html"><b>Page principale</b></a>
                         <a href="pagecontact.html"><b>Me contacter</b></a>
                         <a href="projet.html"><b>Mes projets</b></a>
+                        <a href="https://buy.stripe.com/28o3g13Qs4FI0SYfYY"><b>Cadeau</b></a>
                     </nav>
                 </div>
             </nav>
