--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </label>
             <input type="checkbox" id="ch">
             <nav class="menucontact">
-              <a class="er" href="index.html"><b>Page index</b></a>
+              <a class="er" href="index.html"><b>Page principale</b></a>
               <a href="pagecontact.html"><b>Me contacter</b></a>
               <a href="projet.html"><b>Mes projets</b></a>
               <a href="https://buy.stripe.com/28o3g13Qs4FI0SYfYY"><b>Cadeau</b></a>
@@ -32,7 +32,7 @@
       <!------------------------------------------------------------------------------------------------------------------------->
 
           <nav class="Gmenucontact">
-            <a href="index.html"><b>Page index</b></a>
+            <a href="index.html"><b>Page principale</b></a>
             <a href="pagecontact.html"><b>Me contacter</b></a>
             <a href="projet.html"><b>Mes projets</b></a>
             <a href="https://buy.stripe.com/28o3g13Qs4FI0SYfYY"><b>Cadeau</b></a>
